[gd_scene load_steps=13 format=3 uid="uid://dfwp28jrqjqcu"]

[ext_resource type="Script" path="res://scenes/EndlessRunner.gd" id="1_h7ek7"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2_63njs"]
[ext_resource type="Texture2D" uid="uid://0yivwdbvobt3" path="res://assets/kenney_platformer-characters/PNG/Adventurer/Poses/adventurer_back.png" id="3_5dbam"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="4_dqkkc"]
[ext_resource type="PackedScene" uid="uid://slotggfw4v37" path="res://scenes/Obstacle.tscn" id="5_gpp3a"]
[ext_resource type="PackedScene" uid="uid://5xkv7sy2wdi3" path="res://scenes/Reward.tscn" id="6_br1di"]
[ext_resource type="Script" path="res://scripts/GameManager.gd" id="7_jqdvf"]
[ext_resource type="FontFile" uid="uid://dcbo4v5a6sqid" path="res://assets/TitanOne-Regular.ttf" id="8_gmp6y"]
[ext_resource type="Script" path="res://scripts/Label.gd" id="9_m0vr8"]
[ext_resource type="PackedScene" uid="uid://dvvlvmw86rlr5" path="res://scenes/ScoreTimerUI.tscn" id="10_vsjeb"]
[ext_resource type="Texture2D" uid="uid://bk562ybu681k7" path="res://assets/galaxy.jpg" id="11_vfkod"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17w65"]
size = Vector2(112, 215)

[node name="EndlessRunner" type="Node2D"]
position = Vector2(0, 2)
script = ExtResource("1_h7ek7")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2_63njs")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
scale = Vector2(2.5, 2.5)
texture = ExtResource("3_5dbam")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-1, 18)
shape = SubResource("RectangleShape2D_17w65")

[node name="Spawner" type="Node2D" parent="."]
script = ExtResource("4_dqkkc")
obstacle_scene = ExtResource("5_gpp3a")
reward_scene = ExtResource("6_br1di")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_jqdvf")

[node name="ScoreLabel" type="Label" parent="HUD"]
z_index = 1
layout_mode = 0
offset_left = 462.0
offset_top = 22.0
offset_right = 668.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("8_gmp6y")
theme_override_font_sizes/font_size = 50
script = ExtResource("9_m0vr8")

[node name="Lane1" type="Marker2D" parent="."]
position = Vector2(216, 950)

[node name="Lane2" type="Marker2D" parent="."]
position = Vector2(540, 950)

[node name="Lane3" type="Marker2D" parent="."]
position = Vector2(864, 950)

[node name="Timer" type="Timer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreTimerUI" parent="CanvasLayer" instance=ExtResource("10_vsjeb")]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -540.0
offset_top = 2.0
offset_right = -540.0
offset_bottom = 2.0
grow_vertical = 1

[node name="BG1" type="Sprite2D" parent="."]
position = Vector2(547, -634)
scale = Vector2(1.89531, 1.52476)
texture = ExtResource("11_vfkod")

[node name="BG2" type="Sprite2D" parent="."]
position = Vector2(547, 70)
scale = Vector2(1.89609, 1.81486)
texture = ExtResource("11_vfkod")
